--- a/client/pom.xml
+++ b/client/pom.xml
@@ -9,15 +9,15 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.xmlrpc</groupId>
+    <groupId>org.sonatype.sisu</groupId>
     <artifactId>xmlrpc</artifactId>
     <version>3.1.4-SNAPSHOT</version>
   </parent>
   <artifactId>xmlrpc-client</artifactId>
-  <name>Sisu XML-RPC Client Library</name>
+  <name>Sisu XML-RPC :: Client Library</name>
   <dependencies>
     <dependency>
-      <groupId>org.apache.xmlrpc</groupId>
+      <groupId>org.sonatype.sisu</groupId>
       <artifactId>xmlrpc-common</artifactId>
     </dependency>
     <dependency>
