--- a/common/pom.xml
+++ b/common/pom.xml
@@ -22,38 +22,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.xmlrpc</groupId>
+    <groupId>org.sonatype.sisu</groupId>
     <artifactId>xmlrpc</artifactId>
     <version>3.1.4-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>xmlrpc-common</artifactId>
-  <name>Apache XML-RPC Common Library</name>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.2</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <addExtensions>false</addExtensions>
-            </manifest>
-            <manifestEntries>
-              <Extension-Name>org.apache.xmlrpc</Extension-Name>
-              <Specification-Vendor>UserLand Software, Inc.</Specification-Vendor>
-              <Specification-Version>2003-06-30</Specification-Version>
-              <Specification-Title>XML-RPC</Specification-Title>
-              <Implementation-Vendor-Id>org.apache</Implementation-Vendor-Id>
-              <Implementation-Vendor>Apache Software Foundation</Implementation-Vendor>
-              <Implementation-Version>${project.version}</Implementation-Version>
-            </manifestEntries>
-          </archive>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+  <name>Sisu XML-RPC :: Common Library</name>
   <dependencies>
     <dependency>
       <groupId>org.apache.ws.commons.util</groupId>
