--- a/pom.xml
+++ b/pom.xml
@@ -1,27 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with 
-  this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the 
-  "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
-  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT 
-  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations 
-  under the License. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<!--
+
+  Licensed to the Apache Software Foundation (ASF) under one
+  or more contributor license agreements.  See the NOTICE file
+  distributed with this work for additional information
+  regarding copyright ownership.  The ASF licenses this file
+  to you under the Apache License, Version 2.0 (the
+  "License"); you may not use this file except in compliance
+  with the License.  You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing,
+  software distributed under the License is distributed on an
+  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+  KIND, either express or implied.  See the License for the
+  specific language governing permissions and limitations
+  under the License.    
+
+-->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache</groupId>
-    <artifactId>apache</artifactId>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
     <version>5</version>
-  </parent>
-  <groupId>org.apache.xmlrpc</groupId>
+  </parent>  
+  <groupId>org.sonatype.sisu</groupId>
   <artifactId>xmlrpc</artifactId>
-  <name>Apache XML-RPC</name>
+  <name>Sisu XML-RPC</name>
   <version>3.1.4-SNAPSHOT</version>
   <description>
-    Apache XML-RPC is a Java implementation of XML-RPC, a popular protocol that uses XML over HTTP to
+    Sisu XML-RPC is a Java implementation of XML-RPC, a popular protocol that uses XML over HTTP to
     implement remote procedure calls. Compared to SOAP, or JAX-RPC, it is stable, much simpler and easier to handle.
-    Version 3 of Apache XML-RPC introduces several important vendor extensions over the original XML-RPC
-    specification.
+    Sisu XML-RPC provides HTTP transport pluggability via Async HTTP Client.
   </description>
   <packaging>pom</packaging>
   <url>http://ws.apache.org/xmlrpc/</url>
@@ -34,35 +46,23 @@
   </modules>
 
   <build>
-    <resources>
-      <resource>
-        <filtering>true</filtering>
-        <directory>src/main/filtered-resources</directory>
-      </resource>
-    </resources>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.0.2</version>
-        <inherited>true</inherited>
-        <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
-        </configuration>
-      </plugin>
-    </plugins>
+  	<resources>
+  		<resource>
+  			<filtering>true</filtering>
+  			<directory>src/main/filtered-resources</directory>
+  		</resource>
+  	</resources>
   </build>
 
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>org.apache.xmlrpc</groupId>
+        <groupId>org.sonatype.sisu</groupId>
         <artifactId>xmlrpc-common</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.xmlrpc</groupId>
+        <groupId>org.sonatype.sisu</groupId>
         <artifactId>xmlrpc-client</artifactId>
         <version>${project.version}</version>
       </dependency>
