--- a/client/pom.xml
+++ b/client/pom.xml
@@ -10,15 +10,15 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.sonatype.sisu</groupId>
-    <artifactId>xmlrpc</artifactId>
-    <version>3.1.4-SNAPSHOT</version>
+    <artifactId>sisu-xmlrpc</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
-  <artifactId>xmlrpc-client</artifactId>
+  <artifactId>sisu-xmlrpc-client</artifactId>
   <name>Sisu XML-RPC :: Client Library</name>
   <dependencies>
     <dependency>
       <groupId>org.sonatype.sisu</groupId>
-      <artifactId>xmlrpc-common</artifactId>
+      <artifactId>sisu-xmlrpc-common</artifactId>
     </dependency>
     <dependency>
       <groupId>com.ning</groupId>
