--- a/common/pom.xml
+++ b/common/pom.xml
@@ -23,10 +23,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.sonatype.sisu</groupId>
-    <artifactId>xmlrpc</artifactId>
-    <version>3.1.4-SNAPSHOT</version>
+    <artifactId>sisu-xmlrpc</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
-  <artifactId>xmlrpc-common</artifactId>
+  <artifactId>sisu-xmlrpc-common</artifactId>
   <name>Sisu XML-RPC :: Common Library</name>
   <dependencies>
     <dependency>
