--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,10 +4,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.sonatype.sisu</groupId>
-    <artifactId>xmlrpc</artifactId>
-    <version>3.1.4-SNAPSHOT</version>
+    <artifactId>sisu-xmlrpc</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
-  <artifactId>xmlrpc-server</artifactId>
+  <artifactId>sisu-xmlrpc-server</artifactId>
   <name>Sisu XML-RPC :: Server Library</name>
   <build>
     <plugins>
@@ -29,11 +29,11 @@
     </dependency>
     <dependency>
       <groupId>org.sonatype.sisu</groupId>
-      <artifactId>xmlrpc-common</artifactId>
+      <artifactId>sisu-xmlrpc-common</artifactId>
     </dependency>
     <dependency>
       <groupId>org.sonatype.sisu</groupId>
-      <artifactId>xmlrpc-client</artifactId>
+      <artifactId>sisu-xmlrpc-client</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
