--- a/client/pom.xml
+++ b/client/pom.xml
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>com.ning</groupId>
       <artifactId>async-http-client</artifactId>
-      <version>1.5.0-SNAPSHOT</version>
+      <version>1.5.0</version>
     </dependency>
   </dependencies>
 </project>
