o Add ciMgmt and SSL release URL

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
     <url>git@github.com:sonatype/sisu-xmlrpc.git</url>
   </scm>
   
+  <ciManagement>
+    <system>Hudson</system>
+    <url>https://builds.sonatype.org/job/sisu-xmlrpc/</url>
+  </ciManagement>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -110,5 +115,6 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <forgeReleaseUrl>https://repository.sonatype.org/service/local/staging/deploy/maven2</forgeReleaseUrl>
   </properties>
 </project>
