--- a/sisu-xmlrpc-common/pom.xml
+++ b/sisu-xmlrpc-common/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.sonatype.sisu</groupId>
     <artifactId>sisu-xmlrpc</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
   </parent>
   <artifactId>sisu-xmlrpc-common</artifactId>
   <name>Sisu XML-RPC :: Common Library</name>
