--- a/sisu-xmlrpc-server/pom.xml
+++ b/sisu-xmlrpc-server/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.sonatype.sisu</groupId>
     <artifactId>sisu-xmlrpc</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
   </parent>
   <artifactId>sisu-xmlrpc-server</artifactId>
   <name>Sisu XML-RPC :: Server Library</name>
