--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   <groupId>org.sonatype.sisu</groupId>
   <artifactId>sisu-xmlrpc</artifactId>
   <name>Sisu XML-RPC</name>
-  <version>1.1.0</version>
+  <version>1.2.0-SNAPSHOT</version>
   <description>
     Sisu XML-RPC is a Java implementation of XML-RPC, a popular protocol that uses XML over HTTP to
     implement remote procedure calls. Compared to SOAP, or JAX-RPC, it is stable, much simpler and easier to handle.
