--- a/sisu-xmlrpc-client/pom.xml
+++ b/sisu-xmlrpc-client/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>org.sonatype.sisu</groupId>
     <artifactId>sisu-xmlrpc</artifactId>
-    <version>1.1.0</version>
+    <version>1.2.0-SNAPSHOT</version>
   </parent>
   <artifactId>sisu-xmlrpc-client</artifactId>
   <name>Sisu XML-RPC :: Client Library</name>
